--- a/.eslintrc
+++ b/.eslintrc
@@ -79,7 +79,7 @@
 		"import/no-named-as-default": 0,
 		"linebreak-style": [
 			1,
-			"unix"
+			"windows"
 		],
 		"no-restricted-imports": [
 			1,
@@ -220,6 +220,9 @@
 		"dot-notation": "off",
 		"allowAfterThis": true,
 		"no-console": "off",
+		"no-trailing-spaces": 0,
+		"padded-blocks": 0,
+		"no-useless-constructor": 0,
 		"curly": 0,
 		"comma-dangle": [
 			2,
@@ -319,7 +322,7 @@
 		"react/jsx-key": 2,
 		"react/no-find-dom-node": 1,
 		"react/require-optimization": [
-			1,
+			0,
 			{
 				"allowDecorators": [
 					"pureRender",
@@ -421,7 +424,7 @@
 			2,
 			{
 				"commonjs": true,
-				"amd": false
+				"amd": true
 			}
 		],
 		"import/no-commonjs": [
