--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack4react17StarterKit",
+  "name": "abc",
   "version": "1.0.0",
   "description": "test stend to show how easy we can make code-splitting by in-box features in React 16.7 - Suspense and lazy.",
   "main": "index.js",
@@ -107,6 +107,7 @@
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.15.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.11.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.2",
@@ -176,6 +177,7 @@
     "debug": "^4.1.1",
     "enzyme-adapter-react-16": "^1.10.0",
     "eslint-loader": "^2.1.1",
+    "eslint-import-resolver-webpack": "^0.11.0",
     "exports-loader": "^0.7.0",
     "history": "^4.7.2",
     "html-loader": "^0.5.5",
