--- a/.eslintrc
+++ b/.eslintrc
@@ -94,7 +94,7 @@
 		"vars-on-top": 0,
 		"consistent-return": 1,
 		"no-unused-vars": [
-			"error",
+			"warn",
 			{
 				"vars": "all",
 				"args": "all",
@@ -297,7 +297,7 @@
 		"jsx-a11y/html-has-lang": 1,
 		"jsx-a11y/no-static-element-interactions": 1,
 		"jsx-a11y/anchor-has-content": 1,
-		"jsx-a11y/no-noninteractive-element-interactions": 1,
+		"jsx-a11y/no-noninteractive-element-interactions": 0,
 		"jsx-a11y/alt-text": 1,
 		"jsx-a11y/iframe-has-title": 1,
 		"jsx-a11y/no-autofocus": 1,
@@ -305,6 +305,7 @@
 		"jsx-a11y/no-noninteractive-tabindex": 1,
 		"jsx-a11y/no-noninteractive-element-to-interactive-role": 1,
 		"jsx-a11y/interactive-supports-focus": 1,
+		"jsx-a11y/click-events-have-key-events": 0,
 		"react/no-array-index-key": 1,
 		"react/no-will-update-set-state": 1,
 		"react/require-default-props": 1,
