--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "test stend to show how easy we can make code-splitting by in-box features in React 16.7 - Suspense and lazy.",
   "main": "index.js",
-  "author": "Sviat Kuzhelev",
   "license": "MIT",
   "husky": {
     "hooks": {
@@ -115,6 +114,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.1",
     "eslint-plugin-react-hooks": "^1.4.0",
+    "http-proxy-middleware": "^0.19.1",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
